--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,12 +44,6 @@ a {
     color: inherit;
     text-decoration: none;
   }
-  &.navbar-brand {
-    font-size: 6vh;
-    @include breakpoint(phone) {
-      font-size: 4vh;
-    }
-  }
 }
 h1,
 h2,
@@ -121,6 +115,13 @@ section {
   }
   .section-button-container {
     margin: 4vh 0;
+    width: 85%;
+    a {
+      button {
+        padding: 1vh 1.5vh;
+        width: 100%;
+      }
+    }
   }
 }
 
